Changes for 1.7.3

 - [DEV-242] add dynamic map creation (Aly)
 - [DEV-435] Improvements in monitoring triggers screen (Vedmak)
 - [ZBX-1340] fixed cancel button in forms (Vedmak)
 - [ZBX-1366] fixed dashboard last 20 issues showing events from different triggers (Vedmak)
 - [ZBX-1382] improved performance in dahsboard latest 20 issues (Vedmak)
 - [ZBX-1392] fixed representing of Uptime/Downtime times and slavery discovered devices in STATUS OF DISCOVERY screen (Dmitry)
 - [ZBX-1363] fixed user deletion wth postgre (Vedmak)
 - [ZBX-1155] fixed host profiles groups selecting if previously selected group was deleted (Vedmak)
 - [DEV-386] get funtions now always return array of objects (Vedmak)
 - [ZBX-1303] fixed usergroup linkage to users (Vedmak)
 - [ZBX-1287] fixed operations with user medias (Vedmak)
 - [ZBX-1328] better naming for mass operations in the list of host groups (Alexei)
 - [DEV-137] help link redirected to on-line documentation at www.zabbix.com/documentation/ (Alexei)
 - [ZBX-1329] fixed activating\deactivating host groups (Vedmak)
 - [ZBX-1383] fixed selection after mass operations, performance imrovements and links to host configuration in proxies screen (Vedmak)
 - [ZBX-1377] fixed adding template with linked template (Vedmak)
 - [ZBX-1369] make more strings translatable (Richlv)
 - [ZBX-974] recompressed png images with pngcrush. max size reduction 28%, average reduction 10% (Richlv)
 - [ZBX-1373] fixed auto discovery by proxy module (Sasha)
 - [ZBX-1368] fixed evaluating of "<=" operator in Uptime/Downtime Action condition (Dmitry)
 - [ZBX-1369] make time units translatable in graphs; patch by alixen (Richlv)
 - [ZBXNEXT-146] added support of numeric values with plus sign (Sasha)
 - [ZBX-1358] make more graph strings translatable; patch by alixen (Richlv)
 - [ZBX-1346] fix Timeout directive description in server and proxy configuration files (Richlv)