@@ -20,6 +20,7 @@
 #ifndef ZABBIX_LOGFILES_H
 #define ZABBIX_LOGFILES_H
 
-int	process_log(char *filename, long *lastlogsize, int *mtime, char **value, const char *encoding);
+int	process_log(char *filename, long *lastlogsize, char **value, const char *encoding);
+int	process_log_regexp(char *fileformat, long *lastlogsize, int *mtime, char **value, const char *encoding);
 
 #endif
